--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4",
-        "nesbot/carbon": "1.* || 2.*"
+        "nesbot/carbon": "1.* || 2.* || 3.*"
     },
     "autoload": {
         "psr-4": {
